--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
-"botName": "Hinata-Md",
-"packname": "Hinata-Md",
-"author": "© Riy04",
+"ownerNumber": ["19146271508@s.whatsapp.net"],
+"ownerName": ["FauziGanteng"],
+"botName": "Fauzibotz-Md",
+"packname": "FauziBotz-Md",
+"author": "© Fauzi",
 "sessionName": "session",
 "pathimg": "./media/hinata.jpg",
 
@@ -14,9 +14,9 @@
 
 "donasi": {
 "saweria": "https://saweria.co/Riy20",
-"dana": "081575886399",
+"dana": "6287837703726",
 "AN_dana": "Riy 04",
-"gopay": "081575886399",
+"gopay": "6287837703726",
 "AN_gopay": "Riy 04"
 },
 
